--- a/client/src/styles/_players-section.scss
+++ b/client/src/styles/_players-section.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 16px;
+  margin-bottom: 20px;
 }
 
 .player-card {
